--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     <h3 class="text-xl font-bold mb-4 text-center">X-Ray</h3>
                     <div class="rounded-lg overflow-hidden shadow-lg">
                         <video class="w-full" autoplay loop muted playsinline>
-                            <source src="vid/xray.mp4" type="video/mp4">
+                            <source src="xray.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -281,7 +281,7 @@
                     <h3 class="text-xl font-bold mb-4 text-center">CT Scan</h3>
                     <div class="rounded-lg overflow-hidden shadow-lg">
                         <video class="w-full" autoplay loop muted playsinline>
-                            <source src="vid/head.mp4" type="video/mp4">
+                            <source src="head.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -290,7 +290,7 @@
                     <h3 class="text-xl font-bold mb-4 text-center">Ultrasound</h3>
                     <div class="rounded-lg overflow-hidden shadow-lg">
                         <video class="w-full" autoplay loop muted playsinline>
-                            <source src="vid/womb.mp4" type="video/mp4">
+                            <source src="womb.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -599,4 +599,5 @@
     </script>
 </body>
 </html>
+
 
