--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="flex flex-col md:flex-row items-center gap-8 md:gap-12 animate-on-scroll">
                 <div class="md:w-1/3 text-center">
                     <a href="Richa.png" class="gallery-link">
-                        <img src="Richa.png" alt="Dr. Richa" class="rounded-full shadow-lg mx-auto w-48 h-48 md:w-60 md:h-60 object-cover border-4 border-amber-100 cursor-pointer transition-transform duration-300 hover:scale-105" loading="lazy">
+                        <img src="Richa.png" alt="Dr. Richa" class="rounded-full shadow-lg mx-auto w-48 h-48 md:w-60 md:h-60 object-cover border-4 border-teal-200 cursor-pointer transition-transform duration-300 hover:scale-105" loading="lazy">
                     </a>
                     <h3 class="text-2xl font-bold mt-6 text-gray-600">Dr. Richa</h3>
                     <p class="text-gray-600 mt-1">MD (Radio-Diagnosis), Jipmer</p>
@@ -599,5 +599,6 @@
     </script>
 </body>
 </html>
+
 
 
